# cv-match-ai

./: .gitignore  LICENSE  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
docs/: MEDIAPIPE_IMPLEMENTATION.md  MEDIAPIPE_PLAN.md  PROJECT_IDEA.md
scripts/: download-models.mjs  gen-tauri-icons.mjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AnalysisForm.tsx
src/styles/: AnalysisForm.css
src/utils/: pdfText.ts  textAnalyzer.ts  textEmbedder.ts
